Fixed alignment issues

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,7 +1,10 @@
 .App {
   margin: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
-
 
 .card {
   margin: 5px;
