--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,6 +2,7 @@
   text-align: center;
   color: #ffc416;
   background-image: url(../assets/star.jpeg);
+  width: 95%;
 }
 
 img {
